@@ -1,3 +1,8 @@
+/*******************************************************************************
+ * Copyright (c) 2005, 2014 springside.github.io
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ *******************************************************************************/
 package org.springside.examples.showcase.functional;
 
 import java.net.URL;
@@ -8,8 +13,10 @@ import org.junit.BeforeClass;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.jdbc.datasource.SimpleDriverDataSource;
+import org.springside.examples.showcase.ShowcaseServer;
 import org.springside.modules.test.data.DataFixtures;
 import org.springside.modules.test.jetty.JettyFactory;
+import org.springside.modules.test.spring.Profiles;
 import org.springside.modules.utils.PropertiesLoader;
 
 /**
@@ -32,10 +39,12 @@ public class BaseFunctionalTestCase {
 	private static Logger logger = LoggerFactory.getLogger(BaseFunctionalTestCase.class);
 
 	@BeforeClass
-	public static void beforeClass() throws Exception {
-		baseUrl = propertiesLoader.getProperty("baseUrl", ShowcaseServer.BASE_URL);
+	public static void initFunctionalTestEnv() throws Exception {
 
-		Boolean isEmbedded = new URL(baseUrl).getHost().equals("localhost");
+		baseUrl = propertiesLoader.getProperty("baseUrl");
+
+		Boolean isEmbedded = new URL(baseUrl).getHost().equals("localhost")
+				&& propertiesLoader.getBoolean("embeddedForLocal");
 
 		if (isEmbedded) {
 			startJettyOnce();
@@ -50,14 +59,16 @@ public class BaseFunctionalTestCase {
 	 */
 	protected static void startJettyOnce() throws Exception {
 		if (jettyServer == null) {
-			//设定Spring的profile
-			System.setProperty("spring.profiles.active", "functional");
+			System.out.println("[HINT] Don't forget to set -XX:MaxPermSize=128m");
+
+			// 设定Spring的profile
+			Profiles.setProfileAsSystemProperty(Profiles.FUNCTIONAL_TEST);
 
 			jettyServer = JettyFactory.createServerInSource(new URL(baseUrl).getPort(), ShowcaseServer.CONTEXT);
 			JettyFactory.setTldJarNames(jettyServer, ShowcaseServer.TLD_JAR_NAMES);
 			jettyServer.start();
 
-			logger.info("Jetty Server started at " + baseUrl);
+			logger.info("Jetty Server started at {}", baseUrl);
 		}
 	}
 
@@ -80,7 +91,8 @@ public class BaseFunctionalTestCase {
 	 * 载入默认数据.
 	 */
 	protected static void reloadSampleData() throws Exception {
-		DataFixtures.executeScript(dataSource, "classpath:data/cleanup-data.sql", "classpath:data/import-data.sql");
+		String dbType = propertiesLoader.getProperty("db.type", "h2");
+		DataFixtures.executeScript(dataSource, "classpath:data/" + dbType + "/cleanup-data.sql", "classpath:data/"
+				+ dbType + "/import-data.sql");
 	}
-
 }
